--- a/.env
+++ b/.env
@@ -2,19 +2,19 @@
 API_SECRET=98hbun98h #Used when creating a JWT. It can be anything
 DB_HOST=127.0.0.1
 DB_DRIVER=postgres
-DB_USER=username
-DB_PASSWORD=password
-DB_NAME=fullstack_api
-DB_PORT=5432 #Default postgres port
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_NAME=go_full
+DB_PORT=5454 #Default postgres port
 
 # Postgres Test
 TestApiSecret=98hbun98h
 TestDbHost=127.0.0.1
 TestDbDriver=postgres
-TestDbUser=username
-TestDbPassword=password
-TestDbName=fullstack_api_test
-TestDbPort=5432
+TestDbUser=postgres
+TestDbPassword=postgres
+TestDbName=go_full
+TestDbPort=5454
 
 # Mysql Live
 # API_SECRET=98hbun98h #Used when creating a JWT. It can be anything
